# hadlers/openapi.json
@@ -314,6 +314,40 @@
           }
         }
       }
+    },
+    "/movies/{id}/rating": {
+      "put": {
+        "summary": "Update Movie Rating.",
+        "description": "Update Movie Rating.",
+        "tags": [
+          "movie"
+        ],
+        "operationId": "updateMovieRating",
+        "requestBody": {
+          "description": "all data needed",
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object"
+              },
+              "example":{
+                "stars": 5,
+                "commnet": "verry funny"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "content": {}
+          },
+          "401": {
+            "description": "Not authenticated",
+            "content": {}
+          }
+        }
+      }
     }
   },
   "components": {
